Fixing issues with text behind navbar

--- a/main.css
+++ b/main.css
@@ -58,6 +58,9 @@ html {
 /* ------------------------------------------------------------------------------------------------------------------------- */
 
 .content {
-    text-align: center; 
+    display: block;
+    text-align: left; 
     padding-top: 100px;
+    color: black;
+    text-decoration: none;
 }
